tests/valid/Statements_Syntax/test3.vyp
void main(void) {
    print("Hello, World!\n");
}
