tests/invalid/test3.vyp
void main(void) {
    int a;
    b = 10;  // Variable `b` is not declared
    print("Semantic Error\n");
}
